-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.692 2010-01-13 20:00:54 remko Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-01-15	pwessel
	* GMT 4.5.2 finalized and released
-----------------------------------------------------------------------------------------

2010-01-13	remko
	* psscale.c:		psscale -Bg now correctly produces gridlines using GRID_PEN_PRIMARY.

2010-01-13	jluis
	* gmtdefaults.c:	Replaced free(..) with GMT_free (..) so Win version doesn't crash

2010-01-12	remko
	* job18.*, job24.*:	psxy -Se|E now correctly uses major/minor axis (as in documentation)
				instead of semimajor/minor axis. This required changes in the scripts.
	* clip_ellipse.sh:	---"---
	* example_01.eps:	Local minima and maxima now appear correctly in this example. Was wrong
				at least since 4.2.0.

2010-01-11	pwessel
	* grd2xyz.c:		Added -N<value> to replace NaNs on output and to match xyz2grd options.
	* gmt_support.c:	GMT_inonout_sphpol_count could count a tangent touch as a crossing if
				the tangent point was a node point.

2010-01-10	pwessel
	* gmt_init.c:		The .gmtcommands4 file was assumed to be in UNIX EOL format.
				Now we strop off EOL before checking for blank lines etc.

2010-01-09	pwessel
	* gmt_map.c:		GMT_wesn_clip assumed we always were clipping a polygon when in fact
				this depends on the application.

2010-01-08	jluis
	* gmt_support.c:	Increase the size of the variable that contains the path to
				a CPT file and the pathname to BUFSIZ bytes.
	* surface.c:		Eliminate 2nd sort when no change in throw_away_unusables.

2010-01-07	pwessel
	* borders:		Added the Nunavut province boundary in Canada (land only)
	* grdproject.txt:	Now has better explanation for -D (same as -I in other progs)
	
2010-01-05	pwessel